fixed cvstohash and simple starter script

--- a/index.html
+++ b/index.html
@@ -11,29 +11,63 @@
   <div>
     <h2>National Average</h2>
     <h4>Fuel Mix Comparison (%)</h4>
-    <table>
+    <table id="nationalAverageFuelMix">
       <tr>
-        <th>Hyrdo</th>
-        <th>Nuclear</th>
+        <th>Coal</th>
         <th>Oil</th>
         <th>Gas</th>
-        <th>Coal</th>
-        <th>Non-hydro Renewables</th>
+        <th>Other Fossil</th>
+        <th>Nuclear</th>
+        <th>Hydro</th>
+        <th>Biomass</th>
+        <th>Wind</th>
+        <th>Solar</th>
+        <th>Geo Thermal</th>
+        <th>Other</th>
       </tr>
     </table>
     <h4>Emission Rates (lbs/Mwh)</h4>
-    <table>
+    <table id="nationalAverageEmissionRates">
         <tr>
           <th>Nitrogen Oxide</th>
           <th>Sulfur Dioxide</th>
           <th>Carbon Dioxide</th>
+          <th>Methane</th>
+          <th>Nitrous Oxide</th>
         </tr>
     </table>
   </div>
   <hr/>
   <div>
-      <h3>Region Averages</h3>
+      <h3>State Averages</h3>
+      <table id="stateAverageFuelMix">
+      <tr>
+        <th>State</th>
+        <th>Coal</th>
+        <th>Oil</th>
+        <th>Gas</th>
+        <th>Other Fossil</th>
+        <th>Nuclear</th>
+        <th>Hydro</th>
+        <th>Biomass</th>
+        <th>Wind</th>
+        <th>Solar</th>
+        <th>Geo Thermal</th>
+        <th>Other</th>
+      </tr>
+    </table>
+    <h4>Emission Rates (lbs/Mwh)</h4>
+    <table id="stateAverageEmissionRates">
+        <tr>
+          <th>State</th>
+          <th>Nitrogen Oxide</th>
+          <th>Sulfur Dioxide</th>
+          <th>Carbon Dioxide</th>
+          <th>Methane</th>
+          <th>Nitrous Oxide</th>
+        </tr>
+    </table>
   </div>
-  <script src="js/main.js"></script>
+  <script src="js/solution.js"></script>
 </body>
 </html>
